--- a/src/index.css
+++ b/src/index.css
@@ -104,25 +104,12 @@ html, #root, body{
   max-width: fit-content;
 }
 
-/* .item1 {
-  border-top: 1px solid #dfdfdf;
-  text-align: center;
-  grid-column: 4 / 3;
-}
-.item2{
-  grid-column: 12/1;
-} */
+
 .header{
   margin-bottom: 5px;
   margin-top: 5px;
 }
-/* .deals{
-  width: 300px;
-  height: 215px;
-} */
-/* .deals-img{
-  width: 80px;
-} */
+
 .line{
   text-decoration: line-through;
 }
@@ -140,6 +127,10 @@ html, #root, body{
 .img{
   width: 100%;
   height: 175px;
+}
+
+.max-width{
+  width: 100%;
 }
 
 @media only screen and (max-width: 800px) {
