--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ html, #root, body{
   background-color: #f8f9fa;
 }
 .navbar-react {
+  position: fixed;
   overflow: hidden;
   background-color: #5680E9;
 }
