--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,6 @@ position: sticky; top: 0;
   width: 100%;
   height: 175px;
 }
-
 .max-width{
   width: 100%;
 }
@@ -146,9 +145,10 @@ position: sticky; top: 0;
   border-bottom: 5px solid white;
 }
 .top-border{
-  
     border-top: 5px solid white;
- 
+}
+.z-index-0{
+  z-index: 0;
 }
 @media only screen and (max-width: 800px) {
   .height-video{
