--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ position: sticky; top: 0;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-  
+  z-index: 1;
 }
 
 .dropdown-react:hover .dropbtn-react, .links-react a:hover {
