--- a/src/index.css
+++ b/src/index.css
@@ -148,8 +148,8 @@ position: sticky; top: 0;
 .top-border{
     border-top: 5px solid white;
 }
-.z-index-0{
-  z-index: -1;
+#nav-bar{
+  z-index: 2;
 }
 @media only screen and (max-width: 800px) {
   .height-video{
