--- a/src/index.css
+++ b/src/index.css
@@ -126,8 +126,11 @@ position: sticky; top: 0;
 .card-home{
   width: 220px;
 }
+.sport-img-height{
+  height: 250px;
+}
 .sport-card-height{
-  height: 300px;
+  height: 350px;
 }
 .img{
   width: 100%;
