--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,10 @@ position: sticky; top: 0;
 .top-border{
     border-top: 5px solid white;
 }
+
+.fit-min{
+  min-width: fit-content;
+}
 @media only screen and (max-width: 800px) {
   .height-video{
     height: 300px;
