--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,9 @@ position: sticky; top: 0;
   max-width:150px;
 max-height:150px;
 }
+.bold{
+  font-weight: bold;
+}
 @media only screen and (max-width: 800px) {
   .height-video{
     height: 300px;
