--- a/src/index.css
+++ b/src/index.css
@@ -212,3 +212,59 @@ max-height:150px;
     height: 275px;
   }
 }
+
+.container-progressbar{
+  width:100%;
+}
+.progressbar{
+  counter-reset: step;
+}
+.progressbar li {
+  list-style-type: none;
+  float: left;
+  width: 25%;
+  position: relative;
+  text-align: center;
+}
+.progressbar li:before{
+  content:counter(step);
+  counter-increment: step;
+  width:30px;
+  height: 30px;
+  line-height: 30px;
+  border-color: black;
+  border: 3px solid;
+  display: block;
+  text-align: center;
+  margin: 0 auto 10px auto;
+  border-radius: 50%;
+  background-color: #94def2;
+  /* border:black ; */
+}
+.progressbar li:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  top: 15px;
+  left: -50%;
+  z-index: -1;
+}
+.firstStep{
+  color: green;
+  border-color: green;
+}
+.progressbar li:first-child:after {
+  content: none;
+}
+.progressbar li.active {
+  color: green;
+}
+/* .progressbar li:before {
+  border-color: green;
+} */
+.progressbar li.active + li:after {
+  background-color: green;
+}
+
