--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,17 @@ position: sticky; top: 0;
   width: 25px;
   color: white;
 }
+.icon-test{
+  /* margin-right: 15px;
+  margin-top: 10px; */
+  height: 25px;
+  width: 25px;
+  color: white;
+}
+.link-test{
+  padding-right: 15px;
+  padding-top: 10px;
+}
 .x:hover{
   cursor: pointer;
 }
