--- a/src/index.css
+++ b/src/index.css
@@ -181,6 +181,9 @@ max-height:150px;
 .red{
   color: red;
 }
+.faq{
+  font-size:large;
+}
 @media only screen and (max-width: 800px) {
   .height-video{
     height: 300px;
