--- a/src/index.css
+++ b/src/index.css
@@ -297,13 +297,16 @@ max-height:150px;
 .dialog{
   width: 400px;
   height: 400px;
+  border-radius:4px;
 }
 .rev{
+  border-radius:4px;
   width:400px;
 }
 .input-board{
   height: 100%;
   width: 325px;
+  border-radius:4px;
 }
 .white{
   color: white;
