--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,7 @@ max-height:150px;
   width: 400px;
   height: 400px;
   border-radius:4px;
+  flex-direction: column-reverse;
 }
 .rev{
   border-radius:4px;
