--- a/src/index.css
+++ b/src/index.css
@@ -255,7 +255,7 @@ max-height:150px;
   text-align: center;
   margin: 0 auto 10px auto;
   border-radius: 50%;
-  background-color: #94def2;
+  background-color: #5680E9;
   /* border:black ; */
 }
 .progressbar li:after {
@@ -269,7 +269,7 @@ max-height:150px;
   /* z-index: -1; */
 }
 .firstStep{
-  color: white;
+  color: black;
   border-color: #5680E9;
   z-index: 1;
 }
