--- a/src/index.css
+++ b/src/index.css
@@ -284,7 +284,7 @@ max-height:150px;
 } */
 /* .progressbar li.active + li:after {
   background-color: black;
-} */ */
+} */ 
 
 
 .progress-container{
