--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ position: sticky; top: 0;
   /* position: fixed; */
   overflow: hidden;
   background-color: #5680E9;
+  z-index: 10;
 }
 
 .navbar-react a {
