--- a/src/index.css
+++ b/src/index.css
@@ -244,7 +244,7 @@ max-height:150px;
   list-style-type: none;
   float: left;
   width: 25%;
-  position: relative;
+  /* position: relative; */
   text-align: center;
 }
 .progressbar li:before{
@@ -270,7 +270,7 @@ max-height:150px;
   background-color: black;
   top: 15px;
   left: -50%;
-  z-index: -1;
+  /* z-index: -1; */
 }
 .firstStep{
   color: green;
