--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,8 @@ position: sticky; top: 0;
 
 .dropdown-content-react {
   display: none;
-  position: absolute;
+  /* position: absolute; */
+  position: relative;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
